Started System Health Menu
Made a start on the next tab.. no release being made until tab complete

--- a/Windows10ToolboxModern.csproj
+++ b/Windows10ToolboxModern.csproj
@@ -111,18 +111,6 @@
     <EmbeddedResource Include="Assets\misc\OSInfo.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="Assets\WinUpdate\AutoHoursOff.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Assets\WinUpdate\AutoHoursOn.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Assets\WinUpdate\AutoMaintOff.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Assets\WinUpdate\AutoMaintOn.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
     <EmbeddedResource Include="Assets\WinUpdate\AutoWinDriverOff.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -300,9 +288,6 @@
     <EmbeddedResource Include="Assets\SetTweaks\Context\NoOwn.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="Assets\SetTweaks\Context\NormalContext.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
     <EmbeddedResource Include="Assets\SetTweaks\Context\NoScanDefend.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -324,19 +309,10 @@
     <EmbeddedResource Include="Assets\SetTweaks\Context\RemUnblock.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="Assets\SetTweaks\Context\WiderContext.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
     <EmbeddedResource Include="Assets\SetTweaks\Explorer\AutoClearThumbNo.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Assets\SetTweaks\Explorer\AutoClearThumbYes.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Assets\SetTweaks\Explorer\AutoHideScroll.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Assets\SetTweaks\Explorer\AutoShowScroll.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Assets\SetTweaks\Explorer\BuildVerOffDesktop.bat">
@@ -480,6 +456,9 @@
     <EmbeddedResource Include="Assets\Telemetry\yeswifisense.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <Content Include="Assets\SysHealth\SFCScan.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
